fixed outside border causing overflow

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -18,10 +18,6 @@ body {
    margin: 0;
 }
 
-html {
-   height: -webkit-fill-available;
-}
-
 p {
    margin: 0;
 }
@@ -35,6 +31,7 @@ p {
     height: calc(100vh - 40px);
     width: calc(100vw - 40px);
     max-height: 100vh;
+    max-height: -webkit-fill-available;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
